// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/customized-progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/error.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-next-error"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-error"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon anticon anticon-cross"
      />
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Process
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/icon.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-user"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="user"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M633.6 240.4C601.1 207.9 557.9 190 512 190s-89.1 17.9-121.6 50.4S340 316.1 340 362c0 45.9 17.9 89.1 50.4 121.6S466.1 534 512 534s89.1-17.9 121.6-50.4S684 407.9 684 362c0-45.9-17.9-89.1-50.4-121.6z"
              fill="none"
            />
            <path
              d="M858.5 763.6c-18.9-44.8-46.1-85-80.6-119.5-34.5-34.5-74.7-61.6-119.5-80.6-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6-34.5 34.5-61.6 74.7-80.6 119.5C146.9 807.5 137 854 136 901.8c-.1 4.5 3.5 8.2 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60c4.5 0 8.1-3.7 8-8.2-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Login
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-solution"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="solution"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <circle
              cx="692"
              cy="671"
              fill="none"
              r="80"
            />
            <path
              d="M688 264c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48zM680 400H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM480 544H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
            />
            <path
              d="M432 852H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
            />
            <path
              d="M788.8 777.6c29-26.3 47.2-64.3 47.2-106.6 0-79.5-64.5-144-144-144s-144 64.5-144 144c0 42.3 18.2 80.3 47.2 106.6-57 32.5-96.2 92.7-99.2 162.1-.2 4.5 3.5 8.3 8 8.3h48.1c4.2 0 7.7-3.3 8-7.6C564 871.2 621.7 816 692 816s128 55.2 131.9 124.4c.2 4.2 3.7 7.6 8 7.6H880c4.6 0 8.2-3.8 8-8.3-2.9-69.5-42.2-129.6-99.2-162.1zM692 591c44.2 0 80 35.8 80 80s-35.8 80-80 80-80-35.8-80-80 35.8-80 80-80z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Verification
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-loading"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Pay
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-smile-o"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Done
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/simple.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/small-size.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/step-next.md correctly 1`] = `
<div>
  <div
    class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
  >
    <div
      class="ant-steps-item ant-steps-item-process"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          1
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          First
        </div>
      </div>
    </div>
    <div
      class="ant-steps-item ant-steps-item-wait"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          Second
        </div>
      </div>
    </div>
    <div
      class="ant-steps-item ant-steps-item-wait"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          3
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          Last
        </div>
      </div>
    </div>
  </div>
  <div
    class="steps-content"
  >
    First-content
  </div>
  <div
    class="steps-action"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical-small.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-small"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;
